--- a/app/index.html
+++ b/app/index.html
@@ -12,49 +12,65 @@
     margin: 0;
     padding: 0;
   }
-  
+  body {
+    background: #4DC7A0;
+  }
   .carousel-wrap {
-    width: 1080px;
-    height: 608px;
+    width: 540px;
+    height: 304px;
+    margin: 0 auto;
   }
   
   .carousel-item {
     width: 100%;
   }
+  
+  .carousel-item img {
+    display: block;
+    width: 100%;
+  }
+  
+  .your-class {
+    width: 100%;
+    height: 100%;
+  }
   </style>
 </head>
 
 <body>
-  <!-- <div class="carousel-wrap carousel">
-    <div class="list-wrap">
-      <div class="list">
-        <div class="carousel-item item">
-          <img src="images/1.jpg" alt=""></div>
-        <div class="carousel-item item">
-          <img src="images/2.jpg" alt="">
-        </div>
-        <div class="carousel-item item">
-          <img src="images/3.jpg" alt="">
-        </div>
-      </div>
-    </div>
-    <div class="nav-wrap"></div>
-    <div class="dot-wrap"></div>
-  </div> -->
   <div class="carousel-wrap carousel">
-    <div class="carousel-item">
-      <img src="images/1.jpg" alt=""></div>
-    <div class="carousel-item">
-      <img src="images/2.jpg" alt="">
+    <div class="carousel-item item1" id="11">
+      <img src="images/1.jpg?1" alt="" id="111">
     </div>
-    <div class="carousel-item">
-      <img src="images/3.jpg" alt="">
+    <div class="carousel-item item2" id="12">
+      <img src="images/2.jpg?2" alt="" id="112">
     </div>
+    <div class="carousel-item item3" id="13">
+      <img src="images/3.jpg?3" alt="" id="113">
+    </div>
+    <div class="carousel-item item4" id="14">
+      <img src="images/1.jpg?4" alt="" id="114">
+    </div>
+    <div class="carousel-item item5" id="15">
+      <img src="images/2.jpg?5" alt="" id="115">
+    </div>
+    <div class="carousel-item item6" id="16">
+      <img src="images/3.jpg?6" alt="" id="116">
+    </div>
+    <div class="carousel-item item7" id="17">
+      <img src="images/1.jpg?7" alt="" id="117">
+    </div>
+    <div class="carousel-item item8" id="18">
+      <img src="images/2.jpg?8" alt="" id="118">
+    </div>
+    
   </div>
   <script src="scripts/carousel.js"></script>
   <script>
   window.onload = function() {
-    carousel.init();
+    carousel.init({
+      item: 3
+    });
   };
   </script>
 </body>
