--- a/app/slick.html
+++ b/app/slick.html
@@ -41,32 +41,33 @@
     <div id="11" style="width: 100%;height: 608px;color:#fff;font-size:35px;background: red">1 <span id="a1"></span></div>
     <div id="12" style="width: 100%;height: 608px;color:#fff;font-size:35px;background: yellow">2 <span id="a2"></span></div>
     <div id="13" style="width: 100%;height: 608px;color:#fff;font-size:35px;background: blue">3 <span id="a3"></span></div>
-    <div id="14" style="width: 100%;height: 608px;color:#fff;font-size:35px;background: green">4 <span id="a4"></span></div>
+    <!-- <div id="14" style="width: 100%;height: 608px;color:#fff;font-size:35px;background: green">4 <span id="a4"></span></div>
     <div id="15" style="width: 100%;height: 608px;color:#fff;font-size:35px;background: black">5 <span id="a5"></span></div>
     <div id="16" style="width: 100%;height: 608px;color:#fff;font-size:35px;background: gray">6 <span id="a6"></span></div>
     <div id="17" style="width: 100%;height: 608px;color:#fff;font-size:35px;background: #777bbb">7 <span id="a7"></span></div>
-    <div id="18" style="width: 100%;height: 608px;color:#fff;font-size:35px;background: #888999">8 <span id="a8"></span></div>
+    <div id="18" style="width: 100%;height: 608px;color:#fff;font-size:35px;background: #888999">8 <span id="a8"></span></div> -->
   </div>
   <div class="your-class cl2 owl-carousel owl-theme">
     <div id="11" style="width: 100%;height: 608px;color:#fff;font-size:35px;background: red">1 <span id="a1"></span></div>
     <div id="12" style="width: 100%;height: 608px;color:#fff;font-size:35px;background: yellow">2 <span id="a2"></span></div>
     <div id="13" style="width: 100%;height: 608px;color:#fff;font-size:35px;background: blue">3 <span id="a3"></span></div>
-    <div id="14" style="width: 100%;height: 608px;color:#fff;font-size:35px;background: green">4 <span id="a4"></span></div>
-    <div id="15" style="width: 100%;height: 608px;color:#fff;font-size:35px;background: black">5 <span id="a5"></span></div>
-    <div id="16" style="width: 100%;height: 608px;color:#fff;font-size:35px;background: gray">6 <span id="a6"></span></div>
-    <div id="17" style="width: 100%;height: 608px;color:#fff;font-size:35px;background: #777bbb">7 <span id="a7"></span></div>
-    <div id="18" style="width: 100%;height: 608px;color:#fff;font-size:35px;background: #888999">8 <span id="a8"></span></div>
+    <!-- <div id="14" style="width: 100%;height: 608px;color:#fff;font-size:35px;background: green">4 <span id="a4"></span></div> -->
+    <!-- <div id="15" style="width: 100%;height: 608px;color:#fff;font-size:35px;background: black">5 <span id="a5"></span></div> -->
+    <!-- <div id="16" style="width: 100%;height: 608px;color:#fff;font-size:35px;background: gray">6 <span id="a6"></span></div> -->
+    <!-- <div id="17" style="width: 100%;height: 608px;color:#fff;font-size:35px;background: #777bbb">7 <span id="a7"></span></div> -->
+    <!-- <div id="18" style="width: 100%;height: 608px;color:#fff;font-size:35px;background: #888999">8 <span id="a8"></span></div> -->
   </div>
   <script src="plugins/jquery.min.js"></script>
   <script src="plugins/owl.carousel.js"></script>
   <script src="plugins/slick.js"></script>
   <script>
   window.onload = function() {
-    $('.cl1').slick({ infinite: true, slidesToShow: 3, slidesToScroll: 3 });
+    $('.cl1').slick({ infinite: true, slidesToShow: 1, slidesToScroll: 1 });
 
     $('.cl2').owlCarousel({
       loop: true,
-      items: 1
+      items: 1,
+      nav: true
     });
   };
   </script>
