--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="description" content="Carousel">
+  <meta name="viewport" content="width=750,target-densitydpi=device-dpi,minimal-ui,user-scalable=0">
   <title>Common Webapp Utils</title>
   <link rel="stylesheet" href="styles/carousel.css">
   <link rel="stylesheet" href="styles/main.css">
@@ -31,7 +32,10 @@
   <script src="scripts/carousel.js"></script>
   <script>
   window.onload = function() {
-    carousel.init();
+    carousel.init({
+      auto: true,
+      hoverPause: true
+    });
 
     document.querySelector('#delete').addEventListener('click', function() {
     }, false);
